# pramana-python-sdk

./: CLAUDE.md  IMPLEMENTATION.md  NOTICE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: workflow.yml
src/pramana/: __init__.py  core.py  gaussians.py
tests/: test_core.py  test_gaussian_integers.py  test_gaussian_rationals.py
