[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pramana"
version = "0.1.0"
description = "Pramana Python SDK - Knowledge graph numerics and ontology"
requires-python = ">=3.10"
license = "MIT"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
