[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pramana-lib"
version = "0.1.1"
description = "Comprehensive logic and toolkit for the Pramana knowledge graph"
requires-python = ">=3.10"
license = "MIT"
keywords = ["pramana", "sdk", "library", "gaussian", "number-theory", "knowledge-graph"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
